Version 8.7.0
* [DXFC-335] Fixed a bug when candle symbols are not removed from the subscription

Version 8.6.3
* [DXFC-331] Fixed a bug when deleting a PriceLevelBook object caused crashes.

Version 8.6.2
* [DXFC-327] Fixed a bug where the timestamp = 0 was set for the price level when processing a removed order.
* [DXFC-328] Fixed a bug where UPDATE lists with non-existent price levels sometimes appear in PLB incremental updates.

Version 8.6.1
* Fixed possible symbol corruption
* Fixed a bug where price level updates could be treated as volume increases.

Version 8.6.0
* [DXFC-297] Improved the handling of transaction flags and signs of transaction flags.
  Added a `HasSize` method to the Order SpreadOrder classes 
* [DXFC-295] Fixed a bug with incorrect filtering of orders based on MM and Quotes.
* [DXFC-298] Added the new PLB (Price Level Book) building mechanism. Added the ability to specify the number of the price levels.
  Added the ability to subscribe to incremental price level updates.
  API changes:
    - Added the new class for PLB - dxf_price_level_book_v2_t
    - Added the new handlers interfaces: IDxOnNewPriceLevelBookHandler, IDxOnPriceLevelBookIncChangeHandler, IDxOnPriceLevelBookUpdateHandler
    - A new method has been added to the NativeConnection class to construct a PLB : `IPriceLevelBook CreatePriceLevelBook(string symbol, string source, int levelsNumber)`
  See dxf_price_level_book_sample and documentation.

Version 8.5.3
* [DXFC-279] Fixed a bug when a snapshot created by the `CreateSnapshotSubscription` method with the specified event type and time is not closed by `Dispose`
* [DXFC-137] Fixed a bug where it was not possible to create a snapshot due to a collision of snapshot keys
* Removed the wrong parameter `date` from the dxf_simple_order_book_sample 

Version 8.5.2
* [DXFC-277] Fixed a bug when the subscription with the Time parameter could not close when calling Dispose